Clean up gson-extras project, make it Maven module of gson-parent

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 
   <modules>
     <module>gson</module>
+    <module>extras</module>
   </modules>
 
   <properties>
@@ -41,7 +42,7 @@
 
   <licenses>
     <license>
-      <name>Apache 2.0</name>
+      <name>Apache-2.0</name>
       <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
     </license>
   </licenses>
