--- a/gson/src/test/resources/testcases-proguard.conf
+++ b/gson/src/test/resources/testcases-proguard.conf
@@ -3,6 +3,8 @@
 -optimizations !code/simplification/arithmetic,!code/simplification/cast,!field/*,!class/merging/*
 -optimizationpasses 5
 -allowaccessmodification
+# On Windows mixed case class names might cause problems
+-dontusemixedcaseclassnames
 -keepattributes *Annotation*,Signature,InnerClasses,EnclosingMethod
 -keepclassmembers enum * {
   public static **[] values();
@@ -17,4 +19,5 @@
 
 -dontwarn com.google.gson.functional.EnumWithObfuscatedTest
 -dontwarn junit.framework.TestCase
-
+# Ignore notes about duplicate JDK classes
+-dontnote module-info,jdk.internal.**
