--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.9.1</version>
+    <version>2.8.8-ecwid-1</version>
   </parent>
 
   <artifactId>gson</artifactId>
@@ -42,7 +42,7 @@
           </execution>
         </executions>
       </plugin>
-      <!-- Note: Javadoc plugin has to be run in combination with >= `package` 
+      <!-- Note: Javadoc plugin has to be run in combination with >= `package`
         phase, e.g. `mvn package javadoc:javadoc`, otherwise it fails with
         "Aggregator report contains named and unnamed modules" -->
       <plugin>
@@ -51,11 +51,11 @@
         <version>3.0.0-M7</version>
         <configuration>
           <!-- Deny illegal access, this is required for ReflectionAccessTest -->
-          <!-- Requires Java >= 9; Important: In case future Java versions 
-            don't support this flag anymore, don't remove it unless CI also runs with 
-            that Java version. Ideally would use toolchain to specify that this should 
-            run with e.g. Java 11, but Maven toolchain requirements (unlike Gradle ones) 
-            don't seem to be portable (every developer would have to set up toolchain 
+          <!-- Requires Java >= 9; Important: In case future Java versions
+            don't support this flag anymore, don't remove it unless CI also runs with
+            that Java version. Ideally would use toolchain to specify that this should
+            run with e.g. Java 11, but Maven toolchain requirements (unlike Gradle ones)
+            don't seem to be portable (every developer would have to set up toolchain
             configuration locally). -->
           <argLine>--illegal-access=deny</argLine>
         </configuration>
@@ -68,7 +68,7 @@
         </configuration>
       </plugin>
       <!-- Add module-info to JAR, see https://github.com/moditect/moditect#adding-module-descriptors-to-existing-jar-files -->
-      <!-- Uses ModiTect instead of separate maven-compiler-plugin executions 
+      <!-- Uses ModiTect instead of separate maven-compiler-plugin executions
         for better Eclipse IDE support, see https://github.com/eclipse-m2e/m2e-core/issues/393 -->
       <plugin>
         <groupId>org.moditect</groupId>
