--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <groupId>com.google.code.gson</groupId>
   <artifactId>gson-parent</artifactId>
-  <version>2.9.1</version>
+  <version>2.8.8-ecwid-1</version>
   <packaging>pom</packaging>
 
   <name>Gson Parent</name>
@@ -20,7 +20,7 @@
 
   <modules>
     <module>gson</module>
-    <module>extras</module> 
+    <module>extras</module>
     <module>metrics</module>
     <module>proto</module>
   </modules>
@@ -84,16 +84,16 @@
             </jdkToolchain>
             <!-- Exclude `missing` group because some tags have been omitted when they are redundant -->
             <doclint>all,-missing</doclint>
-            <!-- Link against newer Java API Javadoc because most users likely 
+            <!-- Link against newer Java API Javadoc because most users likely
               use a newer Java version than the one used for building this project -->
             <detectJavaApiLink>false</detectJavaApiLink>
             <links>
               <link>https://docs.oracle.com/en/java/javase/11/docs/api/</link>
             </links>
-            <!-- Disable detection of offline links between Maven modules: 
-              (1) Only `gson` module is published, so for other modules Javadoc links don't 
-              matter much at the moment; (2) The derived URL for the modules is based on 
-              the project URL (= Gson GitHub repo) which is incorrect because it is not 
+            <!-- Disable detection of offline links between Maven modules:
+              (1) Only `gson` module is published, so for other modules Javadoc links don't
+              matter much at the moment; (2) The derived URL for the modules is based on
+              the project URL (= Gson GitHub repo) which is incorrect because it is not
               hosting the Javadoc (3) It might fail due to https://bugs.openjdk.java.net/browse/JDK-8212233 -->
             <detectOfflineLinks>false</detectOfflineLinks>
           </configuration>
