--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.8.9-SNAPSHOT</version>
+    <version>2.8.9</version>
   </parent>
 
   <artifactId>gson</artifactId>
