--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -3,12 +3,12 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.8.9</version>
+    <version>2.9-SNAPSHOT</version>
   </parent>
 
   <artifactId>gson-extras</artifactId>
   <packaging>jar</packaging>
-  <version>2.8.9</version>
+  <version>2.9-SNAPSHOT</version>
   <inceptionYear>2008</inceptionYear>
   <name>Gson Extras</name>
   <description>Google Gson grab bag of utilities, type adapters, etc.</description>
