--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
   <modules>
     <module>gson</module>
     <module>extras</module>
+    <module>codegen</module>
+    <module>metrics</module>
+    <module>proto</module>
   </modules>
 
   <properties>
@@ -65,35 +68,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.1</version>
-          <executions>
-            <execution>
-              <id>default-compile</id>
-              <configuration>
-                <jdkToolchain>
-                  <version>9</version>
-                </jdkToolchain>
-                <release>9</release>
-              </configuration>
-            </execution>
-            <execution>
-              <id>base-compile</id>
-              <goals>
-                <goal>compile</goal>
-              </goals>
-              <configuration>
-                <excludes>
-                  <exclude>module-info.java</exclude>
-                </excludes>
-              </configuration>
-            </execution>
-          </executions>
-          <configuration>
-            <jdkToolchain>
-              <version>[1.5,9)</version>
-            </jdkToolchain>
-            <source>1.6</source>
-            <target>1.6</target>
-          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
