Change doclint setting
All Javadoc errors have been solved previously; doclint can now be enabled
without causing build failures.

--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,8 @@
             <jdkToolchain>
               <version>[11,)</version>
             </jdkToolchain>
-            <doclint>none</doclint>
+            <!-- Exclude `missing` group because some tags have been omitted when they are redundant -->
+            <doclint>all,-missing</doclint>
             <!-- Link against newer Java API Javadoc because most users likely 
               use a newer Java version than the one used for building this project -->
             <detectJavaApiLink>false</detectJavaApiLink>
