--- a/metrics/pom.xml
+++ b/metrics/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.9.0</version>
+    <version>2.9.1-SNAPSHOT</version>
   </parent>
 
   <artifactId>gson-metrics</artifactId>
