Fix consecutive Maven builds failing without performing `clean`
By default moditect-maven-plugin refuses to overwrite the JAR file it
generated in a previous run.

--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -86,6 +86,8 @@
               <module>
                 <moduleInfoFile>${project.build.sourceDirectory}/module-info.java</moduleInfoFile>
               </module>
+              <!-- Overwrite the previously generated JAR file, if any -->
+              <overwriteExistingFiles>true</overwriteExistingFiles>
             </configuration>
           </execution>
         </executions>
