--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,5 +15,5 @@ jobs:
           java-version: '11'
           cache: 'maven'
       - name: Build with Maven
-        # This also runs javadoc:javadoc to detect any issues with the Javadoc
-        run: mvn --batch-mode --update-snapshots verify javadoc:javadoc
+        # This also runs javadoc:jar to detect any issues with the Javadoc generated during release
+        run: mvn --batch-mode --update-snapshots verify javadoc:jar
