Fix compiler warnings causing failure for newer JDK

--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,9 @@
             <showDeprecation>true</showDeprecation>
             <failOnWarning>true</failOnWarning>
             <compilerArgs>
-              <compilerArg>-Xlint:all</compilerArg>
+              <!-- Enable all warnings, except for ones which cause issues when building with newer JDKs, see also
+                https://docs.oracle.com/en/java/javase/11/tools/javac.html#GUID-AEEC9F07-CB49-4E96-8BC7-BCC2C7F725C9 -->
+              <compilerArg>-Xlint:all,-options</compilerArg>
             </compilerArgs>
             <jdkToolchain>
               <version>[11,)</version>
