--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,15 +4,19 @@ on: [push, pull_request]
 
 jobs:
   build:
+    name: "Build on JDK ${{ matrix.java }}"
+    strategy:
+      matrix:
+        java: [ 8, 11, 17 ]
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
+      - name: "Set up JDK ${{ matrix.java }}"
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
-          java-version: '11'
+          java-version: ${{ matrix.java }}
           cache: 'maven'
       - name: Build with Maven
         # This also runs javadoc:jar to detect any issues with the Javadoc generated during release
