Looks like we have to fix doclint for both javac and javadoc.

--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,8 @@
               <version>[11,)</version>
             </jdkToolchain>
             <!-- Exclude `missing` group because some tags have been omitted when they are redundant -->
-            <doclint>all,-missing</doclint>
+            <!-- Exclude `html` group because we e often use h3 without a preceding h2. -->
+            <doclint>all,-missing,-html</doclint>
             <!-- Link against newer Java API Javadoc because most users likely 
               use a newer Java version than the one used for building this project -->
             <detectJavaApiLink>false</detectJavaApiLink>
