--- a/pom.xml
+++ b/pom.xml
@@ -78,8 +78,6 @@
               <!-- Enable all warnings, except for ones which cause issues when building with newer JDKs, see also
                 https://docs.oracle.com/en/java/javase/11/tools/javac.html -->
               <compilerArg>-Xlint:all,-options</compilerArg>
-              <!-- We often use h3 without a preceding h2. -->
-              <compilerArg>-Xdoclint:-html</compilerArg>
             </compilerArgs>
             <jdkToolchain>
               <version>[11,)</version>
@@ -95,8 +93,7 @@
               <version>[11,)</version>
             </jdkToolchain>
             <!-- Exclude `missing` group because some tags have been omitted when they are redundant -->
-            <!-- Exclude `html` group because we e often use h3 without a preceding h2. -->
-            <doclint>all,-missing,-html</doclint>
+            <doclint>all,-missing</doclint>
             <!-- Link against newer Java API Javadoc because most users likely 
               use a newer Java version than the one used for building this project -->
             <detectJavaApiLink>false</detectJavaApiLink>
