Suppress some new lint options that trigger `-Werror`. We may fix these later. (Every test will need an explicit constructor!)

--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -247,6 +247,7 @@
       <properties>
         <javaVersion>17</javaVersion>
         <excludeTestCompilation></excludeTestCompilation>
+        <extraLintSuppressions>,-exports,-missing-explicit-ctor,-removal</extraLintSuppressions>
       </properties>
     </profile>
   </profiles>
