--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -245,7 +245,7 @@
         <jdk>[17,)</jdk>
       </activation>
       <properties>
-        <javaVersion>17</javaVersion>
+        <maven.compiler.testRelease>17</maven.compiler.testRelease>
         <excludeTestCompilation></excludeTestCompilation>
         <extraLintSuppressions>,-exports,-missing-explicit-ctor,-removal</extraLintSuppressions>
       </properties>
