Specify <release>11</release> for javadoc.

--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,7 @@
             <jdkToolchain>
               <version>[11,)</version>
             </jdkToolchain>
+            <release>11</release>
             <!-- Exclude `missing` group because some tags have been omitted when they are redundant -->
             <doclint>all,-missing</doclint>
             <!-- Link against newer Java API Javadoc because most users likely 
