--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>7</maven.compiler.release>
-    <extraLintSuppressions></extraLintSuppressions>
   </properties>
 
   <scm>
@@ -77,7 +76,7 @@
             <compilerArgs>
               <!-- Enable all warnings, except for ones which cause issues when building with newer JDKs, see also
                 https://docs.oracle.com/en/java/javase/11/tools/javac.html -->
-              <compilerArg>-Xlint:all,-options${extraLintSuppressions}</compilerArg>
+              <compilerArg>-Xlint:all,-options</compilerArg>
             </compilerArgs>
             <jdkToolchain>
               <version>[11,)</version>
@@ -92,6 +91,8 @@
             <jdkToolchain>
               <version>[11,)</version>
             </jdkToolchain>
+            <!-- Specify newer JDK as target to allow linking to newer Java API, and to generate
+              module overview in Javadoc for Gson's module descriptor -->
             <release>11</release>
             <!-- Exclude `missing` group because some tags have been omitted when they are redundant -->
             <doclint>all,-missing</doclint>
