Add `id` to pom.xml developer entry
Otherwise BND plugin shows a warning.

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 
   <developers>
     <developer>
+      <id>google</id>
       <organization>Google</organization>
       <organizationUrl>https://www.google.com</organizationUrl>
     </developer>
