Adds ErrorProne `link` into `pom.xml`

--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,7 @@
             <detectJavaApiLink>false</detectJavaApiLink>
             <links>
               <link>https://docs.oracle.com/en/java/javase/11/docs/api/</link>
+              <link>https://errorprone.info/api/latest/</link>
             </links>
             <!-- Disable detection of offline links between Maven modules: 
               (1) Only `gson` module is published, so for other modules Javadoc links don't 
