Adds the `<maven.compiler.testRelease>11</maven.compiler.testRelease>` (#2324)
* Adds `JDK11` to run test with `--release 11`

This commit add a new profile `JDK11` that with a JDK <= 11 apply the property `<maven.compiler.testRelease>11</maven.compiler.testRelease>`

* Removes the `JDK11` profile & Adds `testRelease` property

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.release>7</maven.compiler.release>
+    <maven.compiler.testRelease>11</maven.compiler.testRelease>
   </properties>
 
   <scm>
